chore: fine-tune logo styles

--- a/public/index.html
+++ b/public/index.html
@@ -6,12 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="A free online collaborative whiteboard that you can sketch hand-drawn like content. Just sketch your ideas together on Boodo."
+      content="A whiteboard tool that lets you sketch ideas with a hand-drawn feel. Let's sketch together on Boodo."
     />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Klee+One&family=Noto+Sans+TC:wght@400;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Klee+One&family=Gochi+Hand&family=Noto+Sans+TC:wght@400;700&display=swap"
       rel="stylesheet"
     />
     <title>Online whiteboard | Boodo</title>
