--- a/public/index.html
+++ b/public/index.html
@@ -11,21 +11,22 @@
     <link
       rel="apple-touch-icon"
       sizes="180x180"
-      href="/favicon_io/apple-touch-icon.png"
+      href="/favicon/apple-touch-icon.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="/favicon_io/favicon-32x32.png"
+      href="/favicon/favicon-32x32.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="16x16"
-      href="/favicon_io/favicon-16x16.png"
+      href="/favicon/favicon-16x16.png"
     />
-    <link rel="manifest" href="/favicon_io/site.webmanifest" />
+    <link rel="manifest" href="/favicon/site.webmanifest" />
+    <meta name="theme-color" content="#ffffff" />
     <meta
       name="description"
       content="A whiteboard tool that lets you sketch ideas with a hand-drawn feel. Let's sketch together on Boodo."
